fix visible focus indicator

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 body :focus {
-  outline: none;
+  outline: 3px dotted var(--teal);
 }
 
 body :placeholder {
